--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "stripe": "^15.12.0"
   }
 }
