--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "googleapis": "^140.0.0",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.4.1",
+    "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
+    "passport-apple": "^2.0.2",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "stripe": "^15.12.0"
