--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
   }
