--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "googleapis": "^140.0.0",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
@@ -32,6 +34,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local-mongoose": "^8.0.0",
+    "uuid": "^10.0.0"
   }
 }
