--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "stripe": "^16.1.0",
     "uuid": "^10.0.0"
   }
