--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "pdfkit": "^0.15.0",
+    "puppeteer": "^23.2.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "stripe": "^16.1.0",
