--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
@@ -34,11 +34,14 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.4",
+    "oauth-server": "^0.2.0",
+    "oauth2-server": "^3.1.1",
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
+    "passport-oauth2": "^1.8.0",
     "pdfkit": "^0.15.0",
     "puppeteer": "^23.2.1",
     "socket.io": "^4.7.5",
