--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
@@ -33,7 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.4",
+    "nodemon": "^3.1.7",
     "oauth-server": "^0.2.0",
     "oauth2-server": "^3.1.1",
     "otp-generator": "^4.0.1",
