--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "googleapis": "^140.0.0",
+    "ics": "^3.8.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
