--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport-oauth2": "^1.8.0",
     "pdfkit": "^0.15.0",
     "puppeteer": "^23.2.1",
+    "slugify": "^1.6.6",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "stripe": "^16.1.0",
